<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:id="@+id/streamingList_tabsLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:clickable="true"
            android:focusable="true"
            android:orientation="vertical">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tab"
                style="@style/LiveTabLayout"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/white"
                android:filterTouchesWhenObscured="true"
                app:tabGravity="center"
                app:tabMaxWidth="0dp"
                app:tabMode="fixed" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/gray_12"/>
        </LinearLayout>
        <androidx.cardview.widget.CardView
            android:layout_below="@+id/streamingList_tabsLayout"
            android:id="@+id/imageSlider_cardView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:cardCornerRadius="20dp"
            android:layout_margin="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/imageSliderView"
                android:layout_width="match_parent"
                android:layout_height="220dp"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderAutoCycleEnabled="true"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorMargin="15dp"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorPadding="3dp"
                app:sliderIndicatorRadius="2dp"
                app:sliderIndicatorSelectedColor="#5A5A5A"
                app:sliderIndicatorUnselectedColor="#FFF"
                app:sliderScrollTimeInSec="1"
                app:sliderStartAutoCycle="true" />

        </androidx.cardview.widget.CardView>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/streamingList_swipeRefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/imageSlider_cardView">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/streamingList_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clipToPadding="false"
                android:paddingTop="@dimen/live_streamers_row_offset"
                android:paddingStart="@dimen/live_streamers_row_offset"
                android:paddingEnd="@dimen/live_streamers_row_offset"
                android:paddingBottom="64dp" />
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <LinearLayout
            android:id="@+id/empty_layout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:layout_below="@+id/imageSlider_cardView"
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="match_parent"

            android:gravity="center"
            android:visibility="visible"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/empty_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="30dp"
                android:gravity="center"
                android:visibility="visible"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/image"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:srcCompat="@drawable/ic_users"
                    app:tint="@color/grey_60"
                    tools:srcCompat="@drawable/usergroup" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:text="@string/you_dont_have_any_people_near"
                    android:textSize="22sp"
                    android:gravity="center"
                    android:textColor="@color/grey_60" />

                <TextView
                    android:id="@+id/brief"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_medium"
                    android:text="@string/no_one_found_update"
                    android:textSize="18sp"
                    android:gravity="center"
                    android:textColor="@color/grey_40" />


            </LinearLayout>

            <LinearLayout
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white"
                android:gravity="center"
                android:padding="14dp"
                android:visibility="visible"
                android:orientation="vertical">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:baselineAligned="false">

                    <include
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginBottom="@dimen/live_streamers_row_spacing"
                        android:paddingStart="@dimen/live_streamers_item_spacing"
                        android:paddingEnd="@dimen/live_streamers_item_spacing"
                        layout="@layout/list_item_live_broadcast_general_user_skeleton"/>

                    <include
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginBottom="@dimen/live_streamers_row_spacing"
                        android:paddingStart="@dimen/live_streamers_item_spacing"
                        android:paddingEnd="@dimen/live_streamers_item_spacing"
                        layout="@layout/list_item_live_broadcast_general_user_skeleton"/>

                    <include
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginBottom="@dimen/live_streamers_row_spacing"
                        android:paddingStart="@dimen/live_streamers_item_spacing"
                        android:paddingEnd="@dimen/live_streamers_item_spacing"
                        layout="@layout/list_item_live_broadcast_general_user_skeleton"/>

                </LinearLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:baselineAligned="false">

                    <include
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginBottom="@dimen/live_streamers_row_spacing"
                        android:paddingStart="@dimen/live_streamers_item_spacing"
                        android:paddingEnd="@dimen/live_streamers_item_spacing"
                        layout="@layout/list_item_live_broadcast_general_user_skeleton"/>

                    <include
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginBottom="@dimen/live_streamers_row_spacing"
                        android:paddingStart="@dimen/live_streamers_item_spacing"
                        android:paddingEnd="@dimen/live_streamers_item_spacing"
                        layout="@layout/list_item_live_broadcast_general_user_skeleton"/>

                    <include
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginBottom="@dimen/live_streamers_row_spacing"
                        android:paddingStart="@dimen/live_streamers_item_spacing"
                        android:paddingEnd="@dimen/live_streamers_item_spacing"
                        layout="@layout/list_item_live_broadcast_general_user_skeleton"/>

                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_alignParentBottom="true">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/streamingList_goLiveButton"
                android:layout_width="150dp"
                android:layout_height="40dp"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:text="@string/livestream_stream_go_live"
                android:textStyle="bold"
                android:textSize="18sp"
                android:textAppearance="?attr/textStyleActionMediumInverse"
                android:theme="@style/Button.Live" />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
